k8s/shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shortener-service
spec:
  selector:
    app: shortener
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
